--- a/_i18n_xliff/UnitedPizzaHelper Localizations/fil.xcloc/Localized Contents/fil.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/fil.xcloc/Localized Contents/fil.xliff
@@ -1209,6 +1209,56 @@ Walang pinili ay nangangahulugang i-import ang lahat ng gacha puller.</target>
         <target state="translated">Avg. Pagkuhat (lahat ng uri ★5)</target>
         <note/>
       </trans-unit>
+      <trans-unit id="gachaKit.stats.confidence.alert.message" xml:space="preserve">
+        <source>The confidence of the standard item hit rate is based on the number of available 5-star pulls:
+
+• High confidence: ≥10 cases
+• Medium confidence: 5-9 cases
+• Low confidence: 3-4 cases
+• Insufficient data: &lt;3 cases
+
+Reasons for insufficient confidence:
+• Too few 5-star pulls
+• Incomplete gacha history
+• Recently started recording</source>
+        <target state="translated">Ang tiwala sa standard item hit rate ay nakabatay sa bilang ng mga available na 5-star pulls:
+
+• Mataas na tiwala: ≥10 kaso
+• Katamtamang tiwala: 5-9 kaso
+• Mababang tiwala: 3-4 kaso
+• Hindi sapat na data: &lt;3 kaso
+
+Mga dahilan ng kulang na tiwala:
+• Kakaunting 5-star pulls
+• Hindi kumpleto ang gacha history
+• Kakasimula pa lang mag-record</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="gachaKit.stats.confidence.alert.title" xml:space="preserve">
+        <source>About Confidence Indicators</source>
+        <target state="translated">Tungkol sa mga Tagapagpahiwatig ng Tiwala</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="gachaKit.stats.confidence.high" xml:space="preserve">
+        <source>High confidence</source>
+        <target state="translated">Mataas na tiwala</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="gachaKit.stats.confidence.insufficient" xml:space="preserve">
+        <source>Insufficient data</source>
+        <target state="translated">Hindi sapat na data</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="gachaKit.stats.confidence.low" xml:space="preserve">
+        <source>Low confidence</source>
+        <target state="translated">Mababang tiwala</target>
+        <note/>
+      </trans-unit>
+      <trans-unit id="gachaKit.stats.confidence.medium" xml:space="preserve">
+        <source>Medium confidence</source>
+        <target state="translated">Katamtamang tiwala</target>
+        <note/>
+      </trans-unit>
       <trans-unit id="gachaKit.stats.pull:%lld" xml:space="preserve">
         <source>%lld</source>
         <target state="translated">%lld</target>
